[gd_scene load_steps=3 format=3 uid="uid://pf688th06kii"]

[ext_resource type="Script" path="res://InputTest.gd" id="1_48kjm"]
[ext_resource type="Texture2D" uid="uid://5nhxighw612l" path="res://icons.png" id="2_21xey"]

[node name="InputTest" type="Node2D"]
script = ExtResource("1_48kjm")

[node name="btnUp" type="Button" parent="."]
offset_left = 103.0
offset_top = 38.0
offset_right = 155.0
offset_bottom = 80.0

[node name="sptUp" type="Sprite2D" parent="btnUp"]
texture_filter = 1
position = Vector2(25, 21)
scale = Vector2(2, 2)
texture = ExtResource("2_21xey")
hframes = 42

[node name="btnDown" type="Button" parent="."]
offset_left = 103.0
offset_top = 140.0
offset_right = 155.0
offset_bottom = 182.0

[node name="sptDn" type="Sprite2D" parent="btnDown"]
texture_filter = 1
position = Vector2(25, 21)
scale = Vector2(2, 2)
texture = ExtResource("2_21xey")
hframes = 42

[node name="btnRight" type="Button" parent="."]
offset_left = 166.0
offset_top = 90.0
offset_right = 218.0
offset_bottom = 132.0

[node name="sptRt" type="Sprite2D" parent="btnRight"]
texture_filter = 1
position = Vector2(26, 20)
scale = Vector2(2, 2)
texture = ExtResource("2_21xey")
hframes = 42

[node name="btnLeft" type="Button" parent="."]
offset_left = 43.0
offset_top = 89.0
offset_right = 95.0
offset_bottom = 131.0

[node name="sptLt" type="Sprite2D" parent="btnLeft"]
texture_filter = 1
position = Vector2(26, 21)
scale = Vector2(2, 2)
texture = ExtResource("2_21xey")
hframes = 42

[node name="Label" type="Label" parent="."]
offset_left = 462.0
offset_top = 363.0
offset_right = 548.0
offset_bottom = 391.0
text = "Input Key :"

[node name="sptInput" type="Sprite2D" parent="Label"]
texture_filter = 1
position = Vector2(39, 53)
scale = Vector2(2, 2)
texture = ExtResource("2_21xey")
hframes = 42

[connection signal="pressed" from="btnUp" to="." method="_on_btn_up_pressed"]
[connection signal="pressed" from="btnDown" to="." method="_on_btn_down_pressed"]
[connection signal="pressed" from="btnRight" to="." method="_on_btn_right_pressed"]
[connection signal="pressed" from="btnLeft" to="." method="_on_btn_left_pressed"]
